add uploaded files section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
                         <button id="reset-button" style="display: none;">Reset</button>
                         <div id="file-info-display"></div>
                     </div>
+                    <div id="uploaded-files-section" style="display: none;padding-top: 80px;">
+                        <h2>
+                            <button id="toggle-uploaded-files" class="collapsible-header">Earlier Uploaded Files</button>
+                        </h2>
+                        <div id="uploaded-files-content" class="collapsible-content" ></div>
+                            <ul id="uploaded-files-list">
+                                <!-- Uploaded files will be listed here -->
+                            </ul>
+                        </div>
+                    </div>
                 </main>
         <footer>
             <p>Conclusion Transfer - File Transfer from Conclusion Employees</p>
