--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Conclusion Transfer</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+
 </head>
 <body>
     <div class="container">
@@ -26,6 +28,8 @@
                         <button id="upload-button" style="display: none;">Upload</button>
                         <button id="reset-button" style="display: none;">Reset</button>
                         <div id="file-info-display"></div>
+                        <div id="qrcode"></div>
+
                     </div>
                     <div id="uploaded-files-section" style="display: none;padding-top: 80px;">
                         <h2>
